<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.revapp.prakoso.aptifibeta.fragment.InfoFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <ImageView
        android:id="@+id/info_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/aptifi"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/info_nama"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_info_judul"
        android:layout_below="@+id/info_img"
        android:textSize="15sp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/info_desc"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/str_info_desc"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/info_nama"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_desc"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info_contact"
            android:textSize="17sp"
            android:textColor="#2ecc71"
            />
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info_contact_data"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info_credit"
            android:textSize="17sp"
            android:textColor="#2ecc71"
            />
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info_credit_data"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spesial Thanks :"
            android:textColor="#2ecc71"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info_credit_data2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contributors :"
            android:textColor="#2ecc71"/>
        <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_info_credit_data3"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
